--- a/index.html
+++ b/index.html
@@ -44,13 +44,13 @@ passionnée par son métier elle réalise des clichés à l'occasion de concert,
 		</div>
 		<div class="carousel-inner">
 			<div class="carousel-item active">
-				<img src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.jpg" class="d-block w-100" alt="...">
+				<img src="assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp" class="d-block w-100" alt="...">
 			</div>
 			<div class="carousel-item">
-				<img src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.jpg" class="d-block w-100" alt="...">
+				<img src="assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.webp" class="d-block w-100" alt="...">
 			</div>
 			<div class="carousel-item">
-				<img src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.jpg" class="d-block w-100" alt="...">
+				<img src="assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.webp" class="d-block w-100" alt="...">
 			</div>
 		</div>
 		<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -65,7 +65,7 @@ passionnée par son métier elle réalise des clichés à l'occasion de concert,
 </div>
 <div id="about">
 	<div class="picture left">
-		<img src="./assets/images/nina.png">
+		<img src="assets/images/nina.webp">
 	</div>
 	<div id="about-me">
 		<h3 class="about-me__title">A propos de moi</h3>
@@ -78,15 +78,15 @@ passionnée par son métier elle réalise des clichés à l'occasion de concert,
 	<h3 class="title">Portfolio</h3>
 	<div class="container py-3">
 		<div class="gallery" style="display: none">
-			<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.jpg" alt="Un concert"/>
-			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.jpg" alt="Un homme d'affaire avec les bras croisés"/>
-			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.jpg" alt="Une femme souriante"/>
-			<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.jpg" alt="Deux personnes se prenant par les mains"/>
-			<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.jpg" alt="Une homme avec les yeux fermés"/>
-			<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.jpg" alt="Deux mariés riant"/>
-			<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash.jpg" alt="Une femme prenant une pose"/>
-			<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.jpg" alt="Un chanteur en plein concert"/>
-			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.jpg" alt="Une femme au bureau riant"/>
+			<img data-gallery-tag="Concert" class="gallery-item" src="assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.webp" alt="Un concert"/>
+			<img data-gallery-tag="Entreprises" class="gallery-item" src="assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.webp" alt="Un homme d'affaire avec les bras croisés"/>
+			<img data-gallery-tag="Entreprises" class="gallery-item" src="assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.webp" alt="Une femme souriante"/>
+			<img data-gallery-tag="Mariages" class="gallery-item" src="assets/images/gallery/mariage/hannah-busing-rvf2r-qmprk-unsplash.webp" alt="Deux personnes se prenant par les mains"/>
+			<img data-gallery-tag="Portrait" class="gallery-item" src="assets/images/gallery/portraits/ade-tunji-rvkhwwzfatq-unsplash.webp" alt="Une homme avec les yeux fermés"/>
+			<img data-gallery-tag="Mariages" class="gallery-item" src="assets/images/gallery/mariage/jakob-owens-siniljkxhmc-unsplash.webp" alt="Deux mariés riant"/>
+			<img data-gallery-tag="Portrait" class="gallery-item" src="assets/images/gallery/portraits/van-prattenburg-443cl1ur-8-unsplash.webp" alt="Une femme prenant une pose"/>
+			<img data-gallery-tag="Concert" class="gallery-item" src="assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.webp" alt="Un chanteur en plein concert"/>
+			<img data-gallery-tag="Entreprises" class="gallery-item" src="assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.webp" alt="Une femme au bureau riant"/>
 		</div>
 	</div>
 	<div class="quote">
@@ -158,14 +158,14 @@ passionnée par son métier elle réalise des clichés à l'occasion de concert,
 			</form>
 		</div>
 		<div class="picture right">
-			<img src="./assets/images/camera.png">
+			<img src="assets/images/camera.webp">
 		</div>
 	</div>
 </div>
 
-<script src="./assets/maugallery.js"></script>
+<script src="assets/maugallery.js"></script>
 
-<script src="./assets/scripts.js"></script>
+<script src="assets/scripts.js"></script>
 
 </body>
 </html>
