--- a/index.html
+++ b/index.html
@@ -18,6 +18,16 @@
 <meta name="description" content="Portfolio de Nina Carducci. Photographe professionnel à Bordeaux, 
 passionnée par son métier elle réalise des clichés à l'occasion de concert, mariage ou événement d'entreprise. Elle peut également réaliser vos portrait.">
 
+	<!-- OG -->
+	<meta property="og:title" content="Nina Carducci - Photographe professionnel"/>
+	<meta property="og:type" content="website"/>
+	<meta property="og:url" content="https://nina-carducci.github.io/"/>
+	<meta property="og:image" content="https://github.com/RomainGoujon/Projet-5-OpenClassroom/blob/main/assets/images/nina.webp"/>
+	<meta property="og:image:alt" content="Photo de Nina Carducci">
+	<meta property="og:description" 
+	content="Portfolio de Nina Carducci. Photographe professionnel à Bordeaux, 
+	passionnée par son métier elle réalise des clichés à l'occasion de concert, mariage ou événement d'entreprise. Elle peut également réaliser vos portrait."/>
+
 
 
 </head>
@@ -166,6 +176,43 @@ passionnée par son métier elle réalise des clichés à l'occasion de concert,
 <script src="assets/maugallery.js"></script>
 
 <script src="assets/scripts.js"></script>
+
+
+<script type="application/ld+json">
+	{
+		"@context": "http://schema.org",
+		"@type": "LocalBusiness",
+		"url" : "https://nina-carducci.github.io/",
+		"telephone" : "05 56 67 78 89",
+		"name": "Nina Carducci Photographe",
+		"description" : "Nina Carducci : photographe professionelle à Bordeaux",
+		"priceRange": "50€ 400€",
+		"address": {
+			"@type": "PostalAddress",
+			"streetAddress": "68 avenue Alsace-Lorraine",
+			"addressLocality": "Bordeaux",
+			"postalCode": "33200",
+			"addressCountry": "France"
+		},
+		"geo": {
+			"@type": "GeoCoordinates",
+			"latitude": 44.8466732,
+			"longitude": -0.6065805
+		},
+		"openingHoursSpecification": {
+			"@type": "OpeningHoursSpecification",
+			"dayOfWeek": [
+				"Monday",
+				"Tuesday",
+				"Wednesday",
+				"Thursday",
+				"Friday"
+			],
+			"opens": "10:00",
+			"closes": "19:00"
+		}
+	}
+</script>
 
 </body>
 </html>
