--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.css">
@@ -18,7 +18,7 @@
 <meta name="description" content="Portfolio de Nina Carducci. Photographe professionnel à Bordeaux, 
 passionnée par son métier elle réalise des clichés à l'occasion de concert, mariage ou événement d'entreprise. Elle peut également réaliser vos portrait.">
 
-	<!-- OG -->
+<!-- OG -->
 	<meta property="og:title" content="Nina Carducci - Photographe professionnel"/>
 	<meta property="og:type" content="website"/>
 	<meta property="og:url" content="https://nina-carducci.github.io/"/>
@@ -28,7 +28,11 @@ passionnée par son métier elle réalise des clichés à l'occasion de concert,
 	content="Portfolio de Nina Carducci. Photographe professionnel à Bordeaux, 
 	passionnée par son métier elle réalise des clichés à l'occasion de concert, mariage ou événement d'entreprise. Elle peut également réaliser vos portrait."/>
 
-
+<!-- RS - Instagram -->
+	<meta property="instagram:card" content="./assets/images/instagram.png" />
+    <meta property="instagram:url"  content="https://www.instagram.com/ninacarducci.photo/?hl=fr"/>
+    <meta property="instagram:title" content="Nina Carducci - Photographe" />
+    <meta property="instagram:description" content="Photographe Freelance pour immortaliser tous vos évènements"/>
 
 </head>
 <body>
@@ -40,7 +44,7 @@ passionnée par son métier elle réalise des clichés à l'occasion de concert,
 			<li><a href="#gallery">Galerie</a></li>
 			<li><a href="#services">Service</a></li>
 			<li><a href="#contact">Contact</a></li>
-			<li><a class="social-link" href="https://www.instagram.com/ninacarducci.photo/?hl=fr" target="_blank"><img src="assets/images/instagram.png" alt=""></a></li>
+			<li><a class="social-link" href="https://www.instagram.com/ninacarducci.photo/?hl=fr" target="_blank"><img src="assets/images/instagram.png" alt="Compte Instagram"></a></li>
 		</ul>
 	</div>
 </div>
@@ -75,7 +79,7 @@ passionnée par son métier elle réalise des clichés à l'occasion de concert,
 </div>
 <div id="about">
 	<div class="picture left">
-		<img src="assets/images/nina.webp">
+		<img src="assets/images/nina.webp" alt="Photo de Nina Carducci la photographe">
 	</div>
 	<div id="about-me">
 		<h3 class="about-me__title">A propos de moi</h3>
@@ -158,31 +162,28 @@ passionnée par son métier elle réalise des clichés à l'occasion de concert,
 			<h3>Une question ? Une demande de devis ?</h3>
 			<p> N’hésitez pas à m’écrire ! Je vous répondrais en moins de 24 heures</p>
 			<form action="" method="post">
-				<label>Nom</label>
+				<label for="nom">Nom</label>
 				<input type="text" name="nom" id="nom">
-				<label>Email</label>
+				<label for="email">Email</label>
 				<input type="email" name="email" id="email">
-				<label>Message</label>
+				<label for="message">Message</label>
 				<textarea name="message" id="message" cols="30" rows="10"></textarea>
 				<input type="submit" value="Envoyer"/>
 			</form>
 		</div>
 		<div class="picture right">
-			<img src="assets/images/camera.webp">
+			<img src="assets/images/camera.webp" alt="Appareil Photo">
 		</div>
 	</div>
 </div>
 
-<script src="assets/maugallery.js"></script>
-
-<script src="assets/scripts.js"></script>
 
 
 <script type="application/ld+json">
 	{
 		"@context": "http://schema.org",
 		"@type": "LocalBusiness",
-		"url" : "https://nina-carducci.github.io/",
+		"url" : "https://enzor66.github.io/Projet9/",
 		"telephone" : "05 56 67 78 89",
 		"name": "Nina Carducci Photographe",
 		"description" : "Nina Carducci : photographe professionelle à Bordeaux",
