--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<meta charset="UTF-8">
 	<script src="./assets/bootstrap/bootstrap.bundle.min.js"></script>
 	<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-	<script async src="./assets/maugallery.js"></script>
+	<script async src="./assets/maugallery.simp.js"></script>
 	<script async src="./assets/scripts.js"></script>
 
 <!-- Tags SEO -->
@@ -33,6 +33,14 @@ passionnée par son métier elle réalise des clichés à l'occasion de concert,
     <meta property="instagram:url"  content="https://www.instagram.com/ninacarducci.photo/?hl=fr"/>
     <meta property="instagram:title" content="Nina Carducci - Photographe" />
     <meta property="instagram:description" content="Photographe Freelance pour immortaliser tous vos évènements"/>
+
+<!-- RS - Twitter -->
+<meta name="twitter:card" content="summary">
+<meta name="twitter:title" content="Nina Carducci, Photographe Bordeaux">
+<meta name="twitter:description" content="Je suis photographe de mariage, photographe d’événements, photographe de portrait, photographe pour les professionnels.">
+<meta name="twitter:image" content="./assets/images/nina/nina-facebook.png">
+<meta name="twitter:image:alt" content="portrait_de_la_photographe_nina_carducci">
+
 
 </head>
 <body>
