--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<meta charset="UTF-8">
 	<script src="./assets/bootstrap/bootstrap.bundle.min.js"></script>
 	<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-	<script async src="./assets/maugallery.simp.js"></script>
+	<script async src="./assets/maugallery.js"></script>
 	<script async src="./assets/scripts.js"></script>
 
 <!-- Tags SEO -->
