--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 	<meta charset="UTF-8">
 	<script src="./assets/bootstrap/bootstrap.bundle.min.js"></script>
 	<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-	<script async src="./assets/maugallery.min.js"></script>
-	<script async src="./assets/scripts.min.js"></script>
+	<script async src="./assets/maugallery.js"></script>
+	<script async src="./assets/scripts.js"></script>
 
 <!-- Tags SEO -->
 <title>Nina Carducci - Photographe professionnel</title>
@@ -100,15 +100,15 @@ passionnée par son métier elle réalise des clichés à l'occasion de concert,
 	<h3 class="title">Portfolio</h3>
 	<div class="container py-3">
 		<div class="gallery" style="display: none">
-			<img data-gallery-tag="Concert" class="gallery-item" src="assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.webp" alt="Un concert"/>
-			<img data-gallery-tag="Entreprises" class="gallery-item" src="assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.webp" alt="Un homme d'affaire avec les bras croisés"/>
-			<img data-gallery-tag="Entreprises" class="gallery-item" src="assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.webp" alt="Une femme souriante"/>
-			<img data-gallery-tag="Mariages" class="gallery-item" src="assets/images/gallery/mariage/hannah-busing-rvf2r-qmprk-unsplash.webp" alt="Deux personnes se prenant par les mains"/>
-			<img data-gallery-tag="Portrait" class="gallery-item" src="assets/images/gallery/portraits/ade-tunji-rvkhwwzfatq-unsplash.webp" alt="Une homme avec les yeux fermés"/>
-			<img data-gallery-tag="Mariages" class="gallery-item" src="assets/images/gallery/mariage/jakob-owens-siniljkxhmc-unsplash.webp" alt="Deux mariés riant"/>
-			<img data-gallery-tag="Portrait" class="gallery-item" src="assets/images/gallery/portraits/van-prattenburg-443cl1ur-8-unsplash.webp" alt="Une femme prenant une pose"/>
-			<img data-gallery-tag="Concert" class="gallery-item" src="assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.webp" alt="Un chanteur en plein concert"/>
-			<img data-gallery-tag="Entreprises" class="gallery-item" src="assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.webp" alt="Une femme au bureau riant"/>
+			<img data-gallery-tag="Concert" class="gallery-item" src="assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.webp" width="440" height="440" alt="Un concert"/>
+			<img data-gallery-tag="Entreprises" class="gallery-item" src="assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.webp" width="440" height="440" alt="Un homme d'affaire avec les bras croisés"/>
+			<img data-gallery-tag="Entreprises" class="gallery-item" src="assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.webp" width="440" height="440" alt="Une femme souriante"/>
+			<img data-gallery-tag="Mariages" class="gallery-item" src="assets/images/gallery/mariage/hannah-busing-rvf2r-qmprk-unsplash.webp" width="440" height="440" alt="Deux personnes se prenant par les mains"/>
+			<img data-gallery-tag="Portrait" class="gallery-item" src="assets/images/gallery/portraits/ade-tunji-rvkhwwzfatq-unsplash.webp" width="440" height="440" alt="Une homme avec les yeux fermés"/>
+			<img data-gallery-tag="Mariages" class="gallery-item" src="assets/images/gallery/mariage/jakob-owens-siniljkxhmc-unsplash.webp" width="440" height="440" alt="Deux mariés riant"/>
+			<img data-gallery-tag="Portrait" class="gallery-item" src="assets/images/gallery/portraits/van-prattenburg-443cl1ur-8-unsplash.webp" width="440" height="440" alt="Une femme prenant une pose"/>
+			<img data-gallery-tag="Concert" class="gallery-item" src="assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.webp" width="440" height="440" alt="Un chanteur en plein concert"/>
+			<img data-gallery-tag="Entreprises" class="gallery-item" src="assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.webp" width="440" height="440" alt="Une femme au bureau riant"/>
 		</div>
 	</div>
 	<div class="quote">
