--- a/index.html
+++ b/index.html
@@ -66,13 +66,13 @@ passionnée par son métier elle réalise des clichés à l'occasion de concert,
 		</div>
 		<div class="carousel-inner">
 			<div class="carousel-item active">
-				<img src="assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp" class="d-block w-100" alt="...">
+				<img src="assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp" class="d-block w-100 h-100" alt="Personne en costume qui traverse un passage piéton">
 			</div>
 			<div class="carousel-item">
-				<img src="assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.webp" class="d-block w-100" alt="...">
+				<img src="assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.webp" class="d-block w-100 h-100" alt="Groupe de personnes à un concert">
 			</div>
 			<div class="carousel-item">
-				<img src="assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.webp" class="d-block w-100" alt="...">
+				<img src="assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.webp" class="d-block w-100 h-100" alt="Jeune couple qui danse à leur mariage">
 			</div>
 		</div>
 		<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -180,7 +180,7 @@ passionnée par son métier elle réalise des clichés à l'occasion de concert,
 			</form>
 		</div>
 		<div class="picture right">
-			<img src="assets/images/camera.webp" alt="Appareil Photo">
+			<img src="assets/images/camera.webp" alt="Appareil Photo" loading="lazy">
 		</div>
 	</div>
 </div>
