--- a/index.html
+++ b/index.html
@@ -73,11 +73,11 @@ passionnée par son métier elle réalise des clichés à l'occasion de concert,
 		</div>
 		<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
 			<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-			<span class="visually-hidden">Previous</span>
+			<span class="visually-hidden">Précédent</span>
 		</button>
 		<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
 			<span class="carousel-control-next-icon" aria-hidden="true"></span>
-			<span class="visually-hidden">Next</span>
+			<span class="visually-hidden">Suivant</span>
 		</button>
 	</div>
 </div>
@@ -96,15 +96,15 @@ passionnée par son métier elle réalise des clichés à l'occasion de concert,
 	<h3 class="title">Portfolio</h3>
 	<div class="container py-3">
 		<div class="gallery" style="display: none">
-			<img data-gallery-tag="Concert" class="gallery-item" src="assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.webp" width="430" height="430" loading="lazy" alt="Un concert"/>
-			<img data-gallery-tag="Entreprises" class="gallery-item" src="assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.webp" width="430" height="430" loading="lazy" alt="Un homme d'affaire avec les bras croisés"/>
-			<img data-gallery-tag="Entreprises" class="gallery-item" src="assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.webp" width="430" height="430" loading="lazy" alt="Une femme souriante"/>
-			<img data-gallery-tag="Mariages" class="gallery-item" src="assets/images/gallery/mariage/hannah-busing-rvf2r-qmprk-unsplash.webp" width="430" height="430" loading="lazy" alt="Deux personnes se prenant par les mains"/>
-			<img data-gallery-tag="Portrait" class="gallery-item" src="assets/images/gallery/portraits/ade-tunji-rvkhwwzfatq-unsplash.webp" width="430" height="430" loading="lazy" alt="Une homme avec les yeux fermés"/>
-			<img data-gallery-tag="Mariages" class="gallery-item" src="assets/images/gallery/mariage/jakob-owens-siniljkxhmc-unsplash.webp" width="430" height="430" loading="lazy" alt="Deux mariés riant"/>
-			<img data-gallery-tag="Portrait" class="gallery-item" src="assets/images/gallery/portraits/van-prattenburg-443cl1ur-8-unsplash.webp" width="430" height="430" loading="lazy" alt="Une femme prenant une pose"/>
-			<img data-gallery-tag="Concert" class="gallery-item" src="assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.webp" width="430" height="430" loading="lazy" alt="Un chanteur en plein concert"/>
-			<img data-gallery-tag="Entreprises" class="gallery-item" src="assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.webp" width="430" height="430" loading="lazy" alt="Une femme au bureau riant"/>
+			<img data-gallery-tag="Concert" class="gallery-item img-fluid" src="assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.webp" width="430" height="430" loading="lazy" alt="Un concert"/>
+			<img data-gallery-tag="Entreprises" class="gallery-item img-fluid" src="assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.webp" width="430" height="430" loading="lazy" alt="Un homme d'affaire avec les bras croisés"/>
+			<img data-gallery-tag="Entreprises" class="gallery-item img-fluid" src="assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.webp" width="430" height="430" loading="lazy" alt="Une femme souriante"/>
+			<img data-gallery-tag="Mariages" class="gallery-item img-fluid" src="assets/images/gallery/mariage/hannah-busing-rvf2r-qmprk-unsplash.webp" width="430" height="430" loading="lazy" alt="Deux personnes se prenant par les mains"/>
+			<img data-gallery-tag="Portrait" class="gallery-item img-fluid" src="assets/images/gallery/portraits/ade-tunji-rvkhwwzfatq-unsplash.webp" width="430" height="430" loading="lazy" alt="Une homme avec les yeux fermés"/>
+			<img data-gallery-tag="Mariages" class="gallery-item img-fluid" src="assets/images/gallery/mariage/jakob-owens-siniljkxhmc-unsplash.webp" width="430" height="430" loading="lazy" alt="Deux mariés riant"/>
+			<img data-gallery-tag="Portrait" class="gallery-item img-fluid" src="assets/images/gallery/portraits/van-prattenburg-443cl1ur-8-unsplash.webp" width="430" height="430" loading="lazy" alt="Une femme prenant une pose"/>
+			<img data-gallery-tag="Concert" class="gallery-item img-fluid" src="assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.webp" width="430" height="430" loading="lazy" alt="Un chanteur en plein concert"/>
+			<img data-gallery-tag="Entreprises" class="gallery-item img-fluid" src="assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.webp" width="430" height="430" loading="lazy" alt="Une femme au bureau riant"/>
 		</div>
 	</div>
 	<div class="quote">
