--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ passionnée par son métier elle réalise des clichés à l'occasion de concert,
 		</div>
 		<div class="carousel-inner">
 			<div class="carousel-item active">
-				<img fetchpriority="high" src="assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp" class="d-block w-100 h-100" loading="lazy" alt="Personne en costume qui traverse un passage piéton">
+				<img fetchpriority="high" src="assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp" class="d-block w-100 h-100" alt="Personne en costume qui traverse un passage piéton">
 			</div>
 			<div class="carousel-item">
 				<img fetchpriority="low" src="assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.webp" class="d-block w-100 h-100" loading="lazy" alt="Groupe de personnes à un concert">
@@ -83,7 +83,7 @@ passionnée par son métier elle réalise des clichés à l'occasion de concert,
 </div>
 <div id="about">
 	<div class="picture left">
-		<img src="assets/images/nina.webp" loading="lazy" alt="Photo de Nina Carducci la photographe">
+		<img src="assets/images/nina.webp" alt="Photo de Nina Carducci la photographe">
 	</div>
 	<div id="about-me">
 		<h3 class="about-me__title">A propos de moi</h3>
@@ -185,7 +185,7 @@ passionnée par son métier elle réalise des clichés à l'occasion de concert,
 			</form>
 		</div>
 		<div class="picture right">
-			<img src="assets/images/camera.webp" alt="Appareil Photo" width="415" height="415" style="max-width: 100%; height: auto; "loading="lazy">
+			<img src="assets/images/camera.webp" alt="Appareil Photo" width="420" height="420" loading="lazy">
 		</div>
 	</div>
 </div>
