--- a/index.html
+++ b/index.html
@@ -92,150 +92,21 @@ passionnée par son métier elle réalise des clichés à l'occasion de concert,
 			C’est ce que je vous propose : saisir ces merveilleux moments au travers de mon regard, mon approche, ma technique. Rendre ces moments immortels, afin que vous puissiez y puiser de l’amour, du bonheur, de la tendresse et de lumière à chaque fois que vous poserez les yeux sur vos photos.</p>
 	</div>
 </div>
-<section id="gallery">
-	<h2 class="title">Portfolio</h2>
+<div id="gallery">
+	<h3 class="title">Portfolio</h3>
 	<div class="container py-3">
-	  <div class="gallery">
-		<div class="filters"></div>
-		<div class="gallery-items-row row">
-		  <div
-			class="item-column mb-4 col-12 col-sm-6 col-md-4 col-lg-4 col-xl-4"
-		  >
-			<img
-			  data-gallery-tag="Concert"
-			  class="gallery-item img-fluid"
-			  src="./assets/images/gallery/concerts/aaron-paul-band-live-performance.webp"
-			  alt="Photographie de concert réalisée par Nina Carducci : Performance live d'Aaron Paul Band sur scène"
-			  width="420"
-			  height="420"
-			  loading="lazy"
-			/>
-		  </div>
-		  <div
-			class="item-column mb-4 col-12 col-sm-6 col-md-4 col-lg-4 col-xl-4"
-		  >
-			<img
-			  data-gallery-tag="Entreprise"
-			  class="gallery-item img-fluid"
-			  src="./assets/images/gallery/entreprise/ali-morshedlou-professional-business-attire.webp"
-			  alt="Photographie d'entreprise réalisée par Nina Carducci : Ali Morshedlou en tenue professionnelle"
-			  width="420"
-			  height="420"
-			  loading="lazy"
-			/>
-		  </div>
-		  <div
-			class="item-column mb-4 col-12 col-sm-6 col-md-4 col-lg-4 col-xl-4"
-		  >
-			<img
-			  data-gallery-tag="Entreprise"
-			  class="gallery-item img-fluid"
-			  src="./assets/images/gallery/entreprise/laughing-woman-business-meeting.webp"
-			  alt="Photographie d'entreprise réalisée par Nina Carducci : Femme souriante lors d'une réunion"
-			  width="420"
-			  height="420"
-			  loading="lazy"
-			/>
-		  </div>
-		  <div
-			class="item-column mb-4 col-12 col-sm-6 col-md-4 col-lg-4 col-xl-4"
-		  >
-			<img
-			  data-gallery-tag="Mariage"
-			  class="gallery-item img-fluid"
-			  src="./assets/images/gallery/mariage/hannah-busing-wedding-hands.webp"
-			  alt="Photographie de mariage réalisée par Nina Carducci : Mains de Hannah Busing et de son mari"
-			  width="420"
-			  height="420"
-			  loading="lazy"
-			/>
-		  </div>
-		  <div
-			class="item-column mb-4 col-12 col-sm-6 col-md-4 col-lg-4 col-xl-4"
-		  >
-			<img
-			  data-gallery-tag="Portrait"
-			  class="gallery-item img-fluid"
-			  src="./assets/images/gallery/portraits/ade-tunji-closed-eyes.webp"
-			  alt="Photographie de portrait réalisée par Nina Carducci : Ade Tunji avec les yeux fermés"
-			  width="420"
-			  height="420"
-			  loading="lazy"
-			/>
-		  </div>
-		  <div
-			class="item-column mb-4 col-12 col-sm-6 col-md-4 col-lg-4 col-xl-4"
-		  >
-			<img
-			  data-gallery-tag="Mariage"
-			  class="gallery-item img-fluid"
-			  src="./assets/images/gallery/mariage/jakob-owens-wedding.webp"
-			  alt="Photographie de mariage réalisée par Nina Carducci : Jakob Owens et sa femme lors de leur mariage"
-			  width="420"
-			  height="420"
-			  loading="lazy"
-			/>
-		  </div>
-		  <div
-			class="item-column mb-4 col-12 col-sm-6 col-md-4 col-lg-4 col-xl-4"
-		  >
-			<img
-			  data-gallery-tag="Portrait"
-			  class="gallery-item img-fluid"
-			  src="./assets/images/gallery/portraits/nino-van-prattenburg-behind-fence.webp"
-			  alt="Photographie de portrait réalisée par Nina Carducci : Nino van Prattenburg derrière une clôture"
-			  width="420"
-			  height="420"
-			  loading="lazy"
-			/>
-		  </div>
-		  <div
-			class="item-column mb-4 col-12 col-sm-6 col-md-4 col-lg-4 col-xl-4"
-		  >
-			<img
-			  data-gallery-tag="Concert"
-			  class="gallery-item img-fluid"
-			  src="./assets/images/gallery/concerts/austin-neill-live-performance-close-up.webp"
-			  alt="Photographie de concert réalisée par Nina Carducci : Performance live d'Austin Neill"
-			  width="420"
-			  height="420"
-			  loading="lazy"
-			/>
-		  </div>
-		  <div
-			class="item-column mb-4 col-12 col-sm-6 col-md-4 col-lg-4 col-xl-4"
-		  >
-			<img
-			  data-gallery-tag="Entreprise"
-			  class="gallery-item img-fluid"
-			  src="./assets/images/gallery/entreprise/smiling-woman-office.webp"
-			  alt="Photographie de portrait réalisée par Nina Carducci : Femme souriante au bureau"
-			  width="420"
-			  height="420"
-			  loading="lazy"
-			/>
-		  </div>
+		<div class="gallery" style="display: none">
+			<img data-gallery-tag="Concert" class="gallery-item img-fluid" src="assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.webp" width="430" height="430" loading="lazy" alt="Un concert"/>
+			<img data-gallery-tag="Entreprises" class="gallery-item img-fluid" src="assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.webp" width="430" height="430" loading="lazy" alt="Un homme d'affaire avec les bras croisés"/>
+			<img data-gallery-tag="Entreprises" class="gallery-item img-fluid" src="assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.webp" width="430" height="430" loading="lazy" alt="Une femme souriante"/>
+			<img data-gallery-tag="Mariages" class="gallery-item img-fluid" src="assets/images/gallery/mariage/hannah-busing-rvf2r-qmprk-unsplash.webp" width="430" height="430" loading="lazy" alt="Deux personnes se prenant par les mains"/>
+			<img data-gallery-tag="Portrait" class="gallery-item img-fluid" src="assets/images/gallery/portraits/ade-tunji-rvkhwwzfatq-unsplash.webp" width="430" height="430" loading="lazy" alt="Une homme avec les yeux fermés"/>
+			<img data-gallery-tag="Mariages" class="gallery-item img-fluid" src="assets/images/gallery/mariage/jakob-owens-siniljkxhmc-unsplash.webp" width="430" height="430" loading="lazy" alt="Deux mariés riant"/>
+			<img data-gallery-tag="Portrait" class="gallery-item img-fluid" src="assets/images/gallery/portraits/van-prattenburg-443cl1ur-8-unsplash.webp" width="430" height="430" loading="lazy" alt="Une femme prenant une pose"/>
+			<img data-gallery-tag="Concert" class="gallery-item img-fluid" src="assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.webp" width="430" height="430" loading="lazy" alt="Un chanteur en plein concert"/>
+			<img data-gallery-tag="Entreprises" class="gallery-item img-fluid" src="assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.webp" width="430" height="430" loading="lazy" alt="Une femme au bureau riant"/>
 		</div>
-	  </div>
-	  <div class="modal fade" id="lightBox">
-		<div class="modal-dialog" role="document">
-		  <div class="modal-content">
-			<div class="modal-body">
-			  <button id="prev"><</button>
-			  <img
-				src=""
-				alt=""
-				id="modal-image"
-				class="img-fluid"
-				width="460"
-			  />
-			  <button id="next">></button>
-			</div>
-		  </div>
-		</div>
-	  </div>
 	</div>
-  </section>
 	<div class="quote">
 		<figure>
 			<blockquote>
