--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="fr">
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css">
-	<link rel="stylesheet" href="./assets/style.min.css">
+	<link rel="stylesheet" href="/assets/bootstrap/bootstrap.min.css">
+	<link rel="stylesheet" href="/assets/style.min.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap" rel="stylesheet">
@@ -25,7 +25,7 @@ passionnée par son métier elle réalise des clichés à l'occasion de concert,
 	passionnée par son métier elle réalise des clichés à l'occasion de concert, mariage ou événement d'entreprise. Elle peut également réaliser vos portrait."/>
 
 <!-- RS - Instagram -->
-	<meta property="instagram:card" content="./assets/images/instagram.png" />
+	<meta property="instagram:card" content="/assets/images/instagram.png" />
     <meta property="instagram:url"  content="https://www.instagram.com/ninacarducci.photo/?hl=fr"/>
     <meta property="instagram:title" content="Nina Carducci - Photographe" />
     <meta property="instagram:description" content="Photographe Freelance pour immortaliser tous vos évènements"/>
@@ -34,7 +34,7 @@ passionnée par son métier elle réalise des clichés à l'occasion de concert,
 <meta name="twitter:card" content="summary">
 <meta name="twitter:title" content="Nina Carducci, Photographe Bordeaux">
 <meta name="twitter:description" content="Je suis photographe de mariage, photographe d’événements, photographe de portrait, photographe pour les professionnels.">
-<meta name="twitter:image" content="./assets/images/nina/nina-facebook.png">
+<meta name="twitter:image" content="/assets/images/nina/nina-facebook.png">
 <meta name="twitter:image:alt" content="portrait_de_la_photographe_nina_carducci">
 
 
@@ -228,10 +228,10 @@ passionnée par son métier elle réalise des clichés à l'occasion de concert,
 	}
 </script>
 
-<script src="./assets/bootstrap/bootstrap.bundle.min.js"></script>
+<script src="/assets/bootstrap/bootstrap.bundle.min.js" async></script>
 <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-<script src="./assets/maugallery.simp.js" async></script>
-<script src="./assets/scripts.simp.js" async></script>
+<script src="/assets/maugallery.simp.js" async></script>
+<script src="/assets/scripts.simp.js" async></script>
 
 </body>
 </html>
