--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@ passionnée par son métier elle réalise des clichés à l'occasion de concert,
 	}
 </script>
 
-<script src="/assets/bootstrap/bootstrap.bundle.min.js"></script>
+<script src="/assets/bootstrap/bootstrap.bundle.min.js" defer></script>
 <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 <script src="/assets/maugallery.simp.js" defer></script>
 <script src="/assets/scripts.simp.js" defer></script>
