--- a/index.html
+++ b/index.html
@@ -4,10 +4,18 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="assets/bootstrap/bootstrap.min.css">
 	<link rel="stylesheet" href="assets/style.min.css">
+	<link rel="preload" href="assets/style.min.css" as="style">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap" rel="stylesheet">
 	<meta charset="UTF-8">
+
+<!-- Scripts -->
+<script src="/assets/bootstrap/bootstrap.bundle.min.js" defer></script>
+<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+<script src="/assets/maugallery.simp.js" defer></script>
+<script src="/assets/scripts.simp.js" defer></script>
+
 
 <!-- Tags SEO -->
 <title>Nina Carducci - Photographe professionnel</title>
@@ -228,10 +236,6 @@ passionnée par son métier elle réalise des clichés à l'occasion de concert,
 	}
 </script>
 
-<script src="/assets/bootstrap/bootstrap.bundle.min.js" defer></script>
-<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-<script src="/assets/maugallery.simp.js" defer></script>
-<script src="/assets/scripts.simp.js" defer></script>
 
 </body>
 </html>
