--- a/index.html
+++ b/index.html
@@ -70,13 +70,13 @@ passionnée par son métier elle réalise des clichés à l'occasion de concert,
 		</div>
 		<div class="carousel-inner">
 			<div class="carousel-item active">
-				<img fetchpriority="high" src="assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp" class="d-block w-100 h-100" sizes="100vw" alt="Personne en costume qui traverse un passage piéton">
+				<img fetchpriority="high" src="assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp" class="d-block" sizes="100vw" loading="eager" alt="Personne en costume qui traverse un passage piéton">
 			</div>
 			<div class="carousel-item">
-				<img fetchpriority="low" src="assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.webp" class="d-block w-100 h-100" sizes="100vw" loading="lazy" alt="Groupe de personnes à un concert">
+				<img fetchpriority="low" src="assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.webp" class="d-block" sizes="100vw" loading="lazy" alt="Groupe de personnes à un concert">
 			</div>
 			<div class="carousel-item">
-				<img fetchpriority="low" src="assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.webp" class="d-block w-100 h-100" sizes="100vw" loading="lazy" alt="Jeune couple qui danse à leur mariage">
+				<img fetchpriority="low" src="assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.webp" class="d-block" sizes="100vw" loading="lazy" alt="Jeune couple qui danse à leur mariage">
 			</div>
 		</div>
 		<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
