--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <!-- Scripts -->
 <script src="/assets/bootstrap/bootstrap.bundle.min.js" defer></script>
-<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.4.1.min.js" defer integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 <script src="/assets/maugallery.simp.js" defer></script>
 <script src="/assets/scripts.simp.js" defer></script>
 
@@ -56,11 +56,11 @@ passionnée par son métier elle réalise des clichés à l'occasion de concert,
 			<li><a href="#gallery">Galerie</a></li>
 			<li><a href="#services">Service</a></li>
 			<li><a href="#contact">Contact</a></li>
-			<li><a class="social-link" href="https://www.instagram.com/ninacarducci.photo/?hl=fr" target="_blank"><img src="assets/images/instagram.png" alt="Compte Instagram"></a></li>
+			<li><a class="social-link" href="https://www.instagram.com/ninacarducci.photo/?hl=fr" target="_blank"><img src="assets/images/instagram.png" alt="Logo Instagram"></a></li>
 		</ul>
 	</div>
 </div>
-<div id="header">
+<section id="header">
 
 	<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
 		<div class="carousel-indicators">
@@ -70,14 +70,23 @@ passionnée par son métier elle réalise des clichés à l'occasion de concert,
 		</div>
 		<div class="carousel-inner">
 			<div class="carousel-item active">
-				<img fetchpriority="high" src="assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp" class="d-block" sizes="100vw" loading="eager" alt="Personne en costume qui traverse un passage piéton">
-			</div>
+				<picture>
+					<source srcset="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-650w.webp" type="image/webp" media="(max-width: 650px)">
+					<source srcset="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-1600w.webp" type="image/webp">
+					<img src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-1600w.jpg" class="d-block w-100" alt="Un homme d'affaire marchant sur un passage piéton">
+				</picture>			</div>
 			<div class="carousel-item">
-				<img fetchpriority="low" src="assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.webp" class="d-block" sizes="100vw" loading="lazy" alt="Groupe de personnes à un concert">
-			</div>
+				<picture>
+					<source srcset="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash-650w.webp" type="image/webp" media="(max-width: 650px)">
+					<source srcset="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash-1600w.webp" type="image/webp">
+					<img src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash-1600w.jpg" class="d-block w-100" loading="lazy" alt="Un public enjoué lors d'un concert ou d'un spectacle">
+				</picture>			</div>
 			<div class="carousel-item">
-				<img fetchpriority="low" src="assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.webp" class="d-block" sizes="100vw" loading="lazy" alt="Jeune couple qui danse à leur mariage">
-			</div>
+				<picture>
+					<source srcset="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash-650w.webp" type="image/webp" media="(max-width: 650px)">
+					<source srcset="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash-1600w.webp" type="image/webp">
+					<img src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash-1600w.jpg" class="d-block w-100" loading="lazy" alt="Deux mariés s'embrassant devant les applaudissemnts de leurs invités">
+				</picture>			</div>
 		</div>
 		<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
 			<span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -88,10 +97,10 @@ passionnée par son métier elle réalise des clichés à l'occasion de concert,
 			<span class="visually-hidden">Suivant</span>
 		</button>
 	</div>
-</div>
-<div id="about">
+</section>
+<section id="about">
 	<div class="picture left">
-		<img src="assets/images/nina.webp" alt="Photo de Nina Carducci la photographe">
+		<img src="assets/images/nina.webp" width="560" height="550" alt="Photo de Nina Carducci la photographe">
 	</div>
 	<div id="about-me">
 		<h3 class="about-me__title">A propos de moi</h3>
@@ -99,8 +108,8 @@ passionnée par son métier elle réalise des clichés à l'occasion de concert,
 		<p>Nous passons notre vie à chercher le bonheur, et lorsque nous y touchons, nous n’avons qu’une envie : le figer au travers de photographies pour le savourer avec les personnes qui sont importantes à nos yeux, ou le partager au plus grand nombre.
 			C’est ce que je vous propose : saisir ces merveilleux moments au travers de mon regard, mon approche, ma technique. Rendre ces moments immortels, afin que vous puissiez y puiser de l’amour, du bonheur, de la tendresse et de lumière à chaque fois que vous poserez les yeux sur vos photos.</p>
 	</div>
-</div>
-<div id="gallery">
+</section>
+<section id="gallery">
 	<h3 class="title">Portfolio</h3>
 	<div class="container py-3">
 		<div class="gallery" style="display: none">
@@ -128,9 +137,9 @@ passionnée par son métier elle réalise des clichés à l'occasion de concert,
 			<figcaption class="quote__author">- Richard Avedon</figcaption>
 		</figure>
 	</div>
-</div>
-<div id="services">
-	<h3 class="title">Mes services</h3>
+</section>
+<section id="services">
+	<h2 class="title">Mes services</h2>
 	<div class="container">
 		<div class="service">
 			<div class="service__description">
@@ -164,8 +173,8 @@ passionnée par son métier elle réalise des clichés à l'occasion de concert,
 			</div>
 		</div>
 	</div>
-</div>
-<div class="quote">
+</section>
+<section class="quote">
 	<figure>
 		<blockquote>
             <p class="quote__text">
@@ -176,8 +185,8 @@ passionnée par son métier elle réalise des clichés à l'occasion de concert,
           </blockquote>
 		<figcaption class="quote__author">- Richard Avedon</figcaption>
 	</figure>
-</div>
-<div id="contact">
+</section>
+<section id="contact">
 	<div class="container">
 		<div class="form-container">
 			<h3>Une question ? Une demande de devis ?</h3>
@@ -193,10 +202,10 @@ passionnée par son métier elle réalise des clichés à l'occasion de concert,
 			</form>
 		</div>
 		<div class="picture right">
-			<img src="assets/images/camera.webp" alt="Appareil Photo" width="420" height="420" loading="lazy">
+			<img src="assets/images/camera.webp" width="418" height="418" loading="lazy" style="max-width: 100%; height: auto;" alt="Appareil Photo">
 		</div>
 	</div>
-</div>
+</section>
 
 
 
