--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ passionnée par son métier elle réalise des clichés à l'occasion de concert,
 			<li><a href="#gallery">Galerie</a></li>
 			<li><a href="#services">Service</a></li>
 			<li><a href="#contact">Contact</a></li>
-			<li><a class="social-link" href="https://www.instagram.com/ninacarducci.photo/?hl=fr" target="_blank"><img src="assets/images/instagram.png" alt="Logo Instagram"></a></li>
+			<li><a class="social-link" href="https://www.instagram.com/ninacarducci.photo/?hl=fr" target="_blank"><img src="assets/images/instagram.png" width="15" height="15" alt="Logo Instagram"></a></li>
 		</ul>
 	</div>
 </div>
