--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ passionnée par son métier elle réalise des clichés à l'occasion de concert,
 				<picture>
 					<source srcset="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-650w.webp" type="image/webp" media="(max-width: 650px)">
 					<source srcset="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-1600w.webp" type="image/webp">
-					<img src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-1600w.jpg" class="d-block w-100 h-100" loading="lazy" alt="Un homme d'affaire marchant sur un passage piéton">
+					<img src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-1600w.jpg" class="d-block w-100 h-100" loading="eager" alt="Un homme d'affaire marchant sur un passage piéton">
 				</picture>			</div>
 			<div class="carousel-item">
 				<picture>
